fix(menu): Only show scrollbar when menu item is too big
Also fixes select's menu

Resolves #1247

--- a/packages/mdc-select/mdc-select.scss
+++ b/packages/mdc-select/mdc-select.scss
@@ -85,7 +85,6 @@
     left: 0;
     max-height: 100%;
     transform-origin: center center;
-    overflow-y: scroll;
     z-index: 4; // Should pop up above everything else. temporary-drawer is next highest at 3.
   }
 
